refaturando estilo do header e footer

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/delivery.css">
     
     <!-- Preload critical resources -->
