adicionando nome do desenvolvedor do site

--- a/index.html
+++ b/index.html
@@ -633,6 +633,9 @@
                         <p class="copyright">
                             &copy; 2024 Doce Encanto. Todos os direitos reservados.
                         </p>
+                        <p class="copyright">
+                            Desenvolvido por <a href="https://fazminhapagina.com.br/" style="text-decoration: none; color: #fff;" target="_blank">faz minha página</a>
+                        </p>
                     </div>
                     <div class="col-md-6 text-md-end">
                         <div class="payment-methods">
